--- a/app/views/ppsps/show.html.erb
+++ b/app/views/ppsps/show.html.erb
@@ -1,5 +1,6 @@
 
 <div class="pdf-banner mb-3">
+  <%= image_tag "PPSP.jpg", style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))" %>
   <div class="banner-title">
     Plan Particulier de Sécurité et de Protection de la Santé
   </div>
