--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -1,5 +1,6 @@
 
 <div class="pdf-banner mb-3">
+  <%= wicked_pdf_image_tag "PPSP.jpg", style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))" %>
   <div class="banner-title">
     Plan Particulier de Sécurité et de Protection de la Santé
   </div>
@@ -434,7 +435,7 @@
         - Bouchons d'oreilles et casques anti-bruit (lors d'utilisation de matériels bruyants ou dans un contexte de chantier bruyant (bip de recul, engins vibrants…)
       </div>
     </div>
-    <%= image_tag 'ouvrier_ppsp.png', height: '300px' %>
+    <%= wicked_pdf_image_tag 'ouvrier_ppsp.png', height: '300px' %>
     <div class="container-text">
       <div class="content-title">
         Protection du corps : 
@@ -524,11 +525,11 @@
       <div class="content-text">
         - Suivre la gestuelle du signaleur
       </div>
-      <%= image_tag 'signes_ppsp.png' %>
+      <%= wicked_pdf_image_tag 'signes_ppsp.png' %>
       <div class="content-text">
         Remarque pour les camions toupies : Un espace dédié au nettoyage sera installé sur site est indiqué par le chef d'équipe avant sa manœuvre de coulage 
       </div>
-      <%= image_tag 'camion-toupie_ppsp.png' %>
+      <%= wicked_pdf_image_tag 'camion-toupie_ppsp.png' %>
     </div>
   </div>
 </div>
