--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -7,11 +7,11 @@
     <form id="FormSecurityCoordinator" action=<%= security_coordinators_path %> method="post"></form>
 
     <%= simple_form_for @ppsp do |f| %>
-      <%= f.input :address, label: "Adresse", placeholder: "Indiquez une adresse", input_html: { id: :autocomplete_address } %>
+      <%= f.input :address, label: "Adresse", placeholder: "Indiquez une adresse...", input_html: { id: :autocomplete_address } %>
       <%= f.input :start, label: "Date de début"  %>
       <%= f.input :end, label: "Date de fin"  %>
-      <%= f.input :nature, label: "Nature du travail"  %>
-      <%= f.input :workforce, label: "Workforce"  %>
+      <%= f.input :nature, label: "Nature du travail", placeholder: "Description des travaux..." %>
+      <%= f.input :workforce, label: "Personnel impliqué", placeholder: "1 Chef de chantier, 2 ouvriers..." %>
       <% if policy(Company).new? %>
         <%= link_to "Ajouter une entreprise", new_company_path %>
       <% end %>
@@ -23,20 +23,20 @@
       <% if policy(Moe).new? %>
         <%= link_to "Ajouter un MOE", new_mo_path %>
       <% end %>
-      <%= simple_fields_for :project_information, @ppsp.project_information do |h| %>
-        <%= h.input :reference, label: "Référence du projet" %>
-        <%= h.input :responsible, label: "Responsable" %>
-        <%= h.input :phone, label: "Téléphone" %>
-        <%= h.input :email, label: "Email" %>
-        <%= simple_fields_for :site_manager do |j| %>
-          <%= j.input :name, label: "Chef de chantier" %>
-          <%= j.input :phone, label: "Téléphone" %>
-          <%= j.input :email, label: "Email" %>
+      <%= f.simple_fields_for :project_information, ProjectInformation.new do |h| %>
+        <%= h.input :reference, label: "Référence du projet", placeholder: "B 484..." %>
+        <%= h.input :responsible, label: "Responsable", placeholder: "Entrez le nom du responsable..." %>
+        <%= h.input :phone, label: "Téléphone", placeholder: "Entrez le numéro de téléphone du responsable..." %>
+        <%= h.input :email, label: "Email", placeholder: "Entrez l'email du responsable..."  %>
+        <%= h.simple_fields_for :site_manager, SiteManager.new do |j| %>
+          <%= j.input :name, label: "Chef de chantier", placeholder: "Entrez le nom du chef de chantier..."  %>
+          <%= j.input :phone, label: "Téléphone", placeholder: "Entrez le numéro de téléphone du chef de chantier..."  %>
+          <%= j.input :email, label: "Email", placeholder: "Entrez l'email du chef de chantier..."  %>
         <% end %>
-        <%= simple_fields_for :team_manager do |k| %>
-          <%= k.input :name, label: "Chef d'équipe" %>
-          <%= k.input :phone, label: "Téléphone"  %>
-          <%= k.input :email, label: "Email" %>
+        <%= h.simple_fields_for :team_manager, TeamManager.new do |k| %>
+          <%= k.input :name, label: "Chef d'équipe", placeholder: "Entrez le nom du chef d'équipe..." %>
+          <%= k.input :phone, label: "Téléphone", placeholder: "Entrez le numéro de téléphone du chef d'équipe..."  %>
+          <%= k.input :email, label: "Email", placeholder: "Entrez l'email du chef d'équipe..." %>
         <% end %>
       <% end %>
       <% if policy(ProjectInformation).new? %>
@@ -78,7 +78,7 @@
       <%= f.input :agglomeration, label: "Agglomération", as: :select, collection: Ppsp::AGGLOMERATIONS %>
       <%= f.input :street_impact, label: "Impact sur voirie", as: :select, collection: Ppsp::STREET_IMPACTS %>
       <%= f.input :river_guidance, label: "Signalisation fluviale", as: :select, collection: Ppsp::RIVER_GUIDANCES %>
-      <%= f.submit %>
+      <%= f.submit "Créer un nouveau PPSP" %>
     <% end %>
 
     <% if policy(SecurityCoordinator).new? %>
