Correct routes for the PDF export + comments

--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -6,7 +6,7 @@
 <% @ppsps.each do |ppsp| %>
   <div class="card-ppsp">
     <%= link_to ppsp, ppsp_path(ppsp) %>
-    <%= link_to "PDF", ppsp_pdf_ppsp_path(ppsp, format: :pdf) %>
+    <%= link_to "PDF", ppsp_path(ppsp, format: :pdf), target: "_blank" %>
     <%= link_to "edit", edit_ppsp_path(ppsp) %>
     <%= link_to "x", ppsp_path(ppsp), method: :delete, target: '_blank' %>
   </div>
