--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -51,3 +51,18 @@
   padding: 8px;
   box-shadow: 2px 2px 4px 4px rgba(204, 204, 204, 0.5);
 }
+
+.mb-3 {
+  margin-bottom: 3em;
+}
+
+.my-3 {
+  margin-bottom: 3em;
+  margin-top: 3em;
+}
+
+.page-break { 
+  display:block; 
+  clear:both; 
+  page-break-after:always; 
+}
