--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -8,6 +8,6 @@
     <%= link_to ppsp, ppsp_path(ppsp) %>
     <%= link_to "PDF", ppsp_path(ppsp, format: :pdf), target: "_blank" %>
     <%= link_to "edit", edit_ppsp_path(ppsp) %>
-    <%= link_to "x", ppsp_path(ppsp), method: :delete, target: '_blank' %>
+    <%= link_to "x", ppsp_path(ppsp), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer ce document ?"}, target: '_blank' %>
   </div>
 <% end %>
