--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -5,9 +5,9 @@
 <h1>Mes anciens PPSP</h1>
 <% @ppsps.each do |ppsp| %>
   <div class="card-ppsp">
-    <%= link_to ppsp, ppsp_path(ppsp) %>
-    <%= link_to "PDF", ppsp_path(ppsp, format: :pdf), target: "_blank" %>
+    <%= link_to "Voir les infos", ppsp_path(ppsp) %>
+    <%= link_to "Exporter en PDF", ppsp_path(ppsp, format: :pdf), target: "_blank" %>
     <%= link_to "edit", edit_ppsp_path(ppsp) %>
-    <%= link_to "x", ppsp_path(ppsp), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer ce document ?"}, target: '_blank' %>
+    <%= link_to "x", ppsp_path(ppsp), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer ce document ?"} %>
   </div>
 <% end %>
