Use modal to create instance in the DB view

--- a/app/views/anti_poisons/_form.html.erb
+++ b/app/views/anti_poisons/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @anti_poison do |f| %>
+<%= simple_form_for @anti_poison, remote: true do |f| %>
   <%= f.input :name %>
   <%= f.input :address %>
   <%= f.input :phone %>
