--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -1,15 +1,40 @@
-<%= link_to "Voir la liste des centres anti-poison", anti_poisons_path %>
-<%= link_to "Voir la liste des entreprises", companies_path %>
-<%= link_to "Voir la liste des centres de déminage", deminings_path %>
-<%= link_to "Voir la liste des DIRECCT", direccts_path %>
-<%= link_to "Voir la liste des hôpitaux", hospitals_path %>
+<div class="link-db">
+  <%= link_to "Voir la liste des centres anti-poison", anti_poisons_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des entreprises", companies_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des centres de déminage", deminings_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des DIRECCT", direccts_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des hôpitaux", hospitals_path %>
+</div>
+<div class="link-db">
 <%= link_to "Voir la liste des maitres d'ouvrage", moas_path %>
+</div>
+<div class="link-db">
 <%= link_to "Voir la liste des maitres d'oeuvres", moes_path %>
+</div>
+<div class="link-db">
 <%= link_to "Voir la liste des caisses d'assurances retraite et de santé au travail", pension_insurances_path %>
+</div>
+<div class="link-db">
 <%= link_to "Voir la liste des chantier", project_informations_path %>
+</div>
+<div class="link-db">
 <%= link_to "Voir la liste des comités régionaux de l'OPPBTP", regional_committees_path %>
-<%= link_to "Voir la liste des chefs de chantier", site_managers_path %>
-<%= link_to "Voir la liste des chefs d'équipes", team_managers_path %>
-<%= link_to "Voir la liste des centres SOS Mains et Doigts", sos_hands_path %>
-<%= link_to "Voir la liste des sous-traitants", subcontractors_path %>
-<%= link_to "Voir la liste des médecins du travail", work_medecines_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des centres SOS Mains et Doigts", sos_hands_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des sous-traitants", subcontractors_path %>
+</div>
+<div class="link-db">
+  <%= link_to "Voir la liste des médecins du travail", work_medecines_path %>
+</div>
+
