--- a/app/views/ppsps/_modal_anti_poison.html.erb
+++ b/app/views/ppsps/_modal_anti_poison.html.erb
@@ -8,12 +8,7 @@
     </div>
     <div class="modal-body">
       <div class="cards-form">
-        <%= simple_form_for @anti_poison, remote: true do |f| %>
-          <%= f.input :name %>
-          <%= f.input :address %>
-          <%= f.input :phone %>
-          <%= f.submit %>
-        <% end %>
+        <%= render 'anti_poisons/form' %>
       </div>
     </div>
   </div>
